# CosmosEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  shader.fs
.clangd/index/: Application.cpp.0A7920FFAE0045EF.idx  Application.hpp.1828F7E0208E3005.idx  Camera.cpp.1A610AC577483000.idx  Camera.hpp.16E4042B661EC23E.idx  EBO.cpp.F5EE9249A0BD2844.idx  EBO.hpp.2617139352833A34.idx  Engine.cpp.FCB402A2E29843C3.idx  Engine.hpp.EDC59D95486F689E.idx  InputListener.cpp.5BA5FDA12ACD3BC0.idx  InputListener.hpp.21A905314022C0AA.idx  InputManager.cpp.25E33178C87CAC93.idx  InputManager.hpp.6FD0A04459C54B68.idx  Light.hpp.F2E4E1346F9027D9.idx  Logger.hpp.4BD1FD668CCB4A24.idx  MainScene.cpp.A62C66297381ABFD.idx  MainScene.hpp.E2D063DF23152CFB.idx  Material.cpp.AF1E311D49B8F5D8.idx  Material.hpp.E27B4453CCF7C148.idx  MaterialLibrary.cpp.1A28C0A22B263FA3.idx  MaterialLibrary.hpp.80D94798B3DBCCC9.idx  Mesh.cpp.01D513030D8B3D8F.idx  Mesh.hpp.B36AA69B121F4F2D.idx  ObjLoader.cpp.FFF995F53DF1031F.idx  ObjLoader.hpp.0B6ED232133C7B5A.idx  PBRMaterial.cpp.B3B7AEB98BDF41DB.idx  PBRMaterial.hpp.B532E8E1A895750B.idx  RenderCommand.hpp.94D4B7CE2C5E9D90.idx  RenderableScene.hpp.8CCBECA2C300A1CA.idx  Renderer.cpp.567AA0F723405985.idx  Renderer.hpp.EEF58F147AB7CE3D.idx  Scene.hpp.231B6E1BBDDE177F.idx  SceneManager.hpp.BBDABBCB9423A589.idx  SceneObject.hpp.B9783B15390B9D89.idx  SecondScene.cpp.EDAD08366E8C167B.idx  SecondScene.hpp.75BFAAE1E128A26A.idx  Shader.cpp.2921EF85F512699E.idx  Shader.hpp.EF7AC67483527967.idx  ShaderLibrary.cpp.5F2F4C4CC1E52391.idx  ShaderLibrary.hpp.AD08C48C2DC0D8DC.idx  Skybox.cpp.8CFD2C404A1CEE56.idx  (+38 more)
assets/materials/gold/: Metal048A_2K-PNG.mtlx  Metal048A_2K-PNG.usdc
assets/materials/marble/: Marble006_2K-PNG.mtlx  Marble006_2K-PNG.usdc
assets/materials/rock/: Rock058_2K-PNG.mtlx  Rock058_2K-PNG.usdc
include/: Application.hpp  Camera.hpp  CameraControls.hpp  Core.hpp  EBO.hpp  Engine.hpp  InputListener.hpp  InputManager.hpp  Light.hpp  Logger.hpp  MainScene.hpp  Material.hpp  MaterialLibrary.hpp  Mesh.hpp  ObjLoader.hpp  PBRMaterial.hpp  PerspectiveCamera.hpp  QuaternionCamera.hpp  RenderCommand.hpp  RenderableScene.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp  SceneObject.hpp  Screen.hpp  Shader.hpp  ShaderLibrary.hpp  Skybox.hpp  SkyboxManager.hpp  SkyboxUtils.hpp  Texture.hpp  TextureHDR.hpp  Transform.hpp  Ui.hpp  UniformContext.hpp  UniformPresets.hpp  VAO.hpp  VBO.hpp  VertexLayout.hpp  VertexLayouts.hpp  (+9 more)
include/cosmos/assets/: MaterialLibrary.hpp  ObjLoader.hpp  ResourceLoaders.hpp  ResourceManager.hpp  ShaderLibrary.hpp  Skybox.hpp  SkyboxManager.hpp  SkyboxUtils.hpp
include/cosmos/core/: AppAPI.hpp  AppBootstrap.hpp  Application.hpp  Engine.hpp  Logger.hpp  Profiler.hpp  Window.hpp
include/cosmos/input/: InputListener.hpp  InputManager.hpp
include/cosmos/render/: EBO.hpp  HashUtils.hpp  Material.hpp  Mesh.hpp  PBRMaterial.hpp  RenderCommand.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  TextureHDR.hpp  Transform.hpp  UniformContext.hpp  UniformPresets.hpp  VAO.hpp  VBO.hpp  VertexLayout.hpp  VertexLayouts.hpp
include/cosmos/render/gfx/: GLStateCache.hpp  RenderCommand.hpp  RenderState.hpp
include/cosmos/scene/: Camera.hpp  Light.hpp  QuaternionCamera.hpp  RenderableScene.hpp  Scene.hpp  SceneManager.hpp  SceneObject.hpp
include/cosmos/ui/: PerfOverlay.hpp  Ui.hpp
libs/glad/: glad.c  glad.h
scenes/MainScene/: CMakeLists.txt  MainScene.cpp  MainScene.hpp
scenes/SecondScene/: CMakeLists.txt  SecondScene.cpp  SecondScene.hpp
shaders/: basic.frag  basic.vert  default.frag  default.vert  grid.frag  grid.vert  hdr_to_cubemap.frag  hdr_to_cubemap.vert  highlight.frag  metalness.frag  passthrough.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  reflect.frag  reflect.vert  skybox.vert  xyzmap.frag  xyzmap.vert
shaders/glsl/: common.glsl
src/: Application.cpp  Camera.cpp  CameraControls.cpp  EBO.cpp  Engine.cpp  InputListener.cpp  InputManager.cpp  Material.cpp  Mesh.cpp  ObjLoader.cpp  PBRMaterial.cpp  PerspectiveCamera.cpp  QuaternionCamera.cpp  Renderer.cpp  Shader.cpp  ShaderLibrary.cpp  Skybox.cpp  SkyboxUtils.cpp  Texture.cpp  TextureHDR.cpp  Ui.cpp  VAO.cpp  VBO.cpp  VertexLayouts.cpp  Window.cpp  application.cpp  engine.cpp  main.cpp  perspective_camera.cpp  renderer.cpp  shader.cpp  stb.cpp  texture.cpp  ui.cpp
src/assets/: ObjLoader.cpp  ShaderLibrary.cpp  SkyboxUtils.cpp
src/core/: AppBootstrap.cpp  Application.cpp  Engine.cpp  Profiler.cpp  Window.cpp
src/imgui/backends/: imgui_impl_opengl3.cpp
src/input/: InputListener.cpp  InputManager.cpp
src/render/: EBO.cpp  Material.cpp  Mesh.cpp  PBRMaterial.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureHDR.cpp  VAO.cpp  VBO.cpp  VertexLayouts.cpp
src/render/gfx/: GLStateCache.cpp
src/scene/: Camera.cpp  QuaternionCamera.cpp
src/ui/: Ui.cpp
